--- a/MemberCareOracle/src/main/webapp/WEB-INF/web.xml
+++ b/MemberCareOracle/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,25 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>JoinServlet</display-name>
+    <servlet-name>JoinServlet</servlet-name>
+    <servlet-class>com.icia.controller.JoinServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JoinServlet</servlet-name>
+    <url-pattern>/JoinServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>IdCheckServlet</display-name>
+    <servlet-name>IdCheckServlet</servlet-name>
+    <servlet-class>com.icia.controller.IdCheckServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IdCheckServlet</servlet-name>
+    <url-pattern>/IdCheckServlet</url-pattern>
+    <url-pattern>/idCheck.do</url-pattern>
+  </servlet-mapping>
 </web-app>
